fix missing emcu import in precompute_metrics.ipynb

--- a/viz_scripts/precompute_metrics.ipynb
+++ b/viz_scripts/precompute_metrics.ipynb
@@ -51,7 +51,8 @@
     "import emission.core.get_database as edb\n",
     "import emission.storage.timeseries.fmt_time_query as estf\n",
     "import emission.storage.decorations.analysis_timeseries_queries as esda\n",
-    "import emcommon.metrics.metrics_summaries as emcms"
+    "import emcommon.metrics.metrics_summaries as emcms\n",
+    "import emcommon.util as emcu"
    ]
   },
   {
