store agg metrics in the new format from generate_summaries
With e-mission-common 0.6.5 onward, we have a different format for the metrics summaries https://github.com/e-mission/e-mission-docs/issues/1126#issuecomment-2849606586

This change simply makes the Agg_metrics DB entries use the same format

--- a/viz_scripts/precompute_metrics.ipynb
+++ b/viz_scripts/precompute_metrics.ipynb
@@ -99,41 +99,29 @@
     "tq = scaffolding.get_time_query(year, month)\n",
     "ct = esda.get_entries(esda.CONFIRMED_TRIP_KEY, None, tq)\n",
     "\n",
-    "metrics = await emcms.generate_summaries(metric_list, ct, dynamic_config)\n",
+    "metrics_days = await emcms.generate_summaries(metric_list, ct, dynamic_config)\n",
     "\n",
     "agg_metrics_db = edb.get_agg_metrics_db()\n",
     "op_list = []\n",
     "skipped_count, upserted_count, modified_count = 0, 0, 0\n",
     "\n",
-    "for metric_name, days in metrics.items():\n",
-    "    for day in days:\n",
-    "        date_str = day[\"date\"]\n",
-    "        n_users = day[\"nUsers\"]\n",
-    "        data_fields = {\n",
-    "            k: v\n",
-    "            for k, v in day.items()\n",
-    "            if k not in (\"date\", \"nUsers\")\n",
-    "        }\n",
-    "        query = {\"date\": date_str, \"metric\": metric_name}\n",
+    "for metric_day in metrics_days:\n",
+    "    date_str = metric_day[\"date\"]\n",
+    "    metric_name = metric_day[\"metric\"]\n",
+    "    query = {\"date\": date_str, \"metric\": metric_name}\n",
     "\n",
-    "        existing = agg_metrics_db.find_one(query)\n",
-    "        needs_update = (\n",
-    "            not existing or\n",
-    "            existing.get(\"nUsers\") != n_users or\n",
-    "            existing.get(\"data\") != data_fields\n",
-    "        )\n",
+    "    existing = agg_metrics_db.find_one(query)\n",
+    "    # only update if new data differs from existing (excluding last_updated)\n",
+    "    needs_update = False\n",
+    "    if not existing:\n",
+    "        needs_update = True\n",
+    "    elif (any(existing.get(k) != metric_day[k]) for k in metric_day if k != \"last_updated\"):\n",
+    "        needs_update = True\n",
     "\n",
-    "        if needs_update:\n",
-    "            doc = {\n",
-    "                \"date\": date_str,\n",
-    "                \"metric\": metric_name,\n",
-    "                \"nUsers\": n_users,\n",
-    "                \"data\": data_fields,\n",
-    "                \"last_updated\": arrow.utcnow().datetime\n",
-    "            }\n",
-    "            op_list.append(pymongo.ReplaceOne(query, doc, upsert=True))\n",
-    "        else:\n",
-    "            skipped_count += 1\n",
+    "    if needs_update:\n",
+    "        op_list.append(pymongo.ReplaceOne(query, metric_day, upsert=True))\n",
+    "    else:\n",
+    "        skipped_count += 1\n",
     "\n",
     "if op_list:\n",
     "    result = agg_metrics_db.bulk_write(op_list)\n",
